refactor: mudança na psr-4

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "lucas/atendimento",
     "autoload": {
         "psr-4": {
-            "Lucas\\Atendimento\\": "src/"
+            "Atendimento\\": "src/"
         }
     },
     "authors": [
